--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.12.1",
+    "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-compare-image": "^3.5.4",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
